mise a jour de notre projet